Fix "Edit in settings.json" not readable

--- a/extensions/vuengine-studio-extension/src/core/browser/style/preferences.css
+++ b/extensions/vuengine-studio-extension/src/core/browser/style/preferences.css
@@ -7,3 +7,7 @@
 .ves-pref-input-wrapper .theia-input {
     flex-grow: 1;
 }
+
+.theia-settings-container .pref-content-container a.theia-json-input {
+    color: var(--theia-editor-foreground);
+}
